[tool.poetry]
name = "mlx-esm"
version = "0.1.0"
description = "Implementation of Meta's esm in mlx"
authors = ["Usman Masood <usmanm@fastmail.fm>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlx = "^0.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pyright = "^1.1.350"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]
strict = ["mlx_esm/**"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
lint.select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
lint.ignore = ['W291', 'W292', 'W293']
indent-width = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
