[tool.poetry]
name = "mlx-esm"
version = "0.1.0"
description = "Implementation of Meta's esm in mlx"
authors = ["Usman Masood <usmanm@fastmail.fm>"]
readme = "README.md"

[tool.poetry.scripts]
cli = "mlx_esm.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
mlx = "^0.1.0"
requests = "^2.31.0"
ruff = "^0.2.1"
pyright = "^1.1.350"
jupyterlab = "^4.1.0"
ipython = "^8.21.0"
matplotlib = "^3.8.2"
numpy = "^1.26.4"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
torch = "^2.2.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]
# strict = ["mlx_esm/**"]

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 100
indent-width = 2

[tool.ruff.lint]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
